--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta content="Reservasi Universitas Madura" name="description" />
   <meta content="Themesbrand" name="author" />
   <!-- App favicon -->
+  <link href="/assets/libs/@fullcalendar/core/main.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/libs/@fullcalendar/daygrid/main.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/libs/@fullcalendar/bootstrap/main.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/libs/@fullcalendar/timegrid/main.min.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="/assets/images/favicon.ico">
   <!-- preloader css -->
   <link rel="stylesheet" href="/assets/css/preloader.min.css" type="text/css" />
@@ -21,14 +25,18 @@
   <link rel="stylesheet" href="/assets/libs/sweetalert2/sweetalert2.min.css" type="text/css">
   <!-- Alertify -->
   <link rel="stylesheet" href="/assets/libs/alertifyjs/build/css/alertify.min.css" type="text/css">
-
+  <link rel="stylesheet" href="/assets/libs/flatpickr/flatpickr.min.css">
+  
+  
 
 </head>
 
-<body data-sidebar="dark">
+<body data-sidebar="brand">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <!-- JAVASCRIPT -->
+  <script src="/assets/libs/flatpickr/flatpickr.min.js"></script>
+
   <script src="/assets/libs/jquery/jquery.min.js"></script>
   <script src="/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/libs/metismenu/metisMenu.min.js"></script>
@@ -37,7 +45,13 @@
   <script src="/assets/libs/feather-icons/feather.min.js"></script>
   <script src="/assets/libs/sweetalert2/sweetalert2.min.js"></script>
   <script src="/assets/libs/alertifyjs/build/alertify.min.js"></script>
-
+  <script src="/assets/libs/@fullcalendar/core/main.min.js"></script>
+  <script src="/assets/libs/@fullcalendar/bootstrap/main.min.js"></script>
+  <script src="/assets/libs/@fullcalendar/daygrid/main.min.js"></script>
+  <script src="/assets/libs/@fullcalendar/timegrid/main.min.js"></script>
+  <script src="/assets/libs/@fullcalendar/interaction/main.min.js"></script>
+  <script src="/assets/pages/FullCalendar.js"></script>
+  
   <!-- pace js -->
   <script src="/assets/libs/pace-js/pace.min.js"></script>
 </body>
