--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
   <link rel="stylesheet" href="/assets/libs/sweetalert2/sweetalert2.min.css" type="text/css">
   <!-- Alertify -->
   <link rel="stylesheet" href="/assets/libs/alertifyjs/build/css/alertify.min.css" type="text/css">
-  <link rel="stylesheet" href="/assets/libs/flatpickr/flatpickr.min.css">
-  
-  
+  <link rel="stylesheet" href="/assets/libs/alertifyjs/build/css/themes/default.min.css" type="text/css">
+ 
 
 </head>
 
@@ -35,8 +34,6 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <!-- JAVASCRIPT -->
-  <script src="/assets/libs/flatpickr/flatpickr.min.js"></script>
-
   <script src="/assets/libs/jquery/jquery.min.js"></script>
   <script src="/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/libs/metismenu/metisMenu.min.js"></script>
