--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </head>
 
 <body data-sidebar="brand">
+  <div id="layar">
+    <img src="/assets/images/loading.svg" alt="" width="100" />
+  </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <!-- JAVASCRIPT -->
