--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Starter Page | Minia - Minimal Admin & Dashboard Template</title>
+  <title>SIMOLA | Sistem Infomasi Manajemen Mobil dan Aula</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="Reservasi Universitas Madura" name="description" />
   <meta content="Themesbrand" name="author" />
@@ -12,7 +12,7 @@
   <link href="/assets/libs/@fullcalendar/daygrid/main.min.css" rel="stylesheet" type="text/css" />
   <link href="/assets/libs/@fullcalendar/bootstrap/main.min.css" rel="stylesheet" type="text/css" />
   <link href="/assets/libs/@fullcalendar/timegrid/main.min.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="/assets/images/favicon.ico">
+  <link rel="shortcut icon" href="https://simat.unira.ac.id/img/unira.png">
   <!-- preloader css -->
   <link rel="stylesheet" href="/assets/css/preloader.min.css" type="text/css" />
   <!-- Bootstrap Css -->
@@ -32,7 +32,7 @@
 
 <body data-sidebar="brand">
   <div id="layar">
-    <img src="/assets/images/loading.svg" alt="" width="100" />
+    <img src="/assets/images/loading.svg" alt="" width="80" />
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
